- New Minilog feature, for admin-bots usage. This is a small FIFO stack (64 entries). Older entries
	will be overwritten if not pop'ed in time. The new commands:
		- "poponelog" pop an entry out of the minilog
		- "poplog" pop all entries out of the minilog
	ATM the game engine write into it the current events: MAP, CONNECT, DISCONNECT, JOIN, 
	KILL, TEAMKILL, SELFKILL, ROB, SAY, SAYTEAM, SAYTELL, SECRET, KICK, RENAME, CALLVOTE.
- New client command "secret" (no rcon needed) that add silently an entry "SECRET" to the minilog,
	can be usefull for registering to a third party admin-bot, ...
- New command: "mute <client ID>", that change anything that this client try to say into "(muted)", 
	mute it twice and everything he says would be silently drop. Use "unmute <client ID>" 
	to restore his voice.
- New command "kicknum <client ID> [reason]", a replacement for clientkick (DEPRECATED). 
	The reason is sent to the client.
- New cvar g_allowVoteLevelTime: you can't call a vote before this time (in seconds) has passed.
- New cvar g_allowVoteDelay: you have to wait this time after you called a vote to call another one.

Changes in SG 1.1b4-20100116
******************
***** CHANGES ****
- engine source synchronized with ioQuake3 SDK rev1771
- Enhanced SDK portability
- Player will be kicked if he is trying to rename when he was proposed to be kicked
- Enhanced callvote command security
- Player names are now colorized in lists like "callvote kick" list to avoid name confusion
- Fixed a bad prediction case when cg_boostfps is set, thanks to Joe Kari for the reporting
- Fixed simultaneous reloading bug in akimbo mode
- Added new command 'addentity', it can be used to test misc_externalentity or any map entity
- Added support for misc_externalmodel map entity, thanks to World Of Padman project
- Fixed bug where having a scoped Sharps in your inventory caused double spread for the other rifles, and the gatling.
- Added close clipping feature for mappers, thanks to Joe Kari